<resources>
    <string name="app_name">PI3-ES-2024-T24</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bem-vindo ao</string>
    <string name="appName">LockN\'Live</string>
    <string name="name">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="birth">Data de nascimento</string>
    <string name="phone">Celular</string>
    <string name="password">Senha</string>
    <string name="confpassword">Confirmar senha</string>
    <string name="criar_conta">Crie uma conta</string>
    <string name="j_tem_conta_clique_aqui">Já tem cadastro? Clique aqui</string>
    <string name="sign_up">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="sair_da_conta">Sair da conta?</string>
    <string name="sair">sair</string>
    <string name="cancelar">cancelar</string>
    <string name="comece_a_alugar_armarios_agora">Comece a alugar armarios agora! :)</string>
    <string name="ol_bem_vindo_de_volta">Olá, bem vindo de volta!</string>
    <string name="msg_sign_up">Faça o login ou crie uma conta para começar a alugar armarios!</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="login_text">Faça o login ou crie uma conta para começar a alugar armarios!</string>
    <string name="verificar_armarios_por_perto">Verificar armarios por perto:</string>
    <string name="n_o_tem_cadastro_clique_aqui">Não tem cadastro? Clique aqui.</string>
    <string name="realizar_loca_o">Realizar locação</string>
    <string name="selectione_uma_op_o_de_tempo">Selecione uma opção de tempo:</string>
    <string name="confirm">Confirmar</string>
    <string name="j_tem_cadastro_clique_aqui">Já tem cadastro? Clique aqui.</string>
    <string name="texto_informativo_redefinir_senha">Digite seu endereço de email para redefinir sua senha</string>
    <string name="cadastro_cartao">Insira os dados para cadastrar seu cartão de crédito:</string>
    <string name="nome_do_titular">Nome do titular</string>
    <string name="n_mero_do_cart_o">Número do cartão</string>
    <string name="validade">Validade</string>
    <string name="ccv">CCV</string>
    <string name="aviso_caucao">Atenção, ao cadastrar o seu cartão de crédito, todas as vezes que realizar uma locação, será cobrada a caução de uma diária e, estornada proporcionalmente de acordo com o período utilizado.</string>
    <string name="aviso_signout">Tem certeza que deseja sair da sua conta atual?</string>
    <string name="tem_certeza_que_quer_cancelar_a_loca_o">Tem certeza que deseja cancelar a locação?</string>
    <string name="voc_ter_que_realizar_a_loca_o_novamente_caso_cancele_a">Você terá que realizar a locação novamente caso cancele-a.</string>
    <string name="_18_horas">18 horas</string>
    <string name="restriction_time">Opção disponível apenas entre 7 e 8 horas da manhã.</string>
    <string name="_4_horas">4 horas</string>
    <string name="_2_horas">2 horas</string>
    <string name="_1_hora">1 hora</string>
    <string name="_30_minutos">30 minutos</string>
    <string name="pre_o_de_30_min">Valor para 30 min.</string>
    <string name="valor_1hora">Valor para 1 hora.</string>
    <string name="pre_o_de_18_hora">Valor para 18 horas.</string>
    <string name="valor_de_4_hora">Valor para 4 horas.</string>
    <string name="valor_2h">Valor para 2 horas.</string>
    <string name="client_name">Client name</string>
    <string name="client_email">Client Email</string>
    <string name="cliente">Cliente:</string>
    <string name="lo_pending">Parece que você tem uma locação pendente.</string>
    <string name="num_acessantes">Insira o número de acessantes da locação:</string>
    <string name="_2_pessoas">2 pessoas</string>
    <string name="_1_pessoa">1 pessoa</string>
    <string name="rotas">Rotas</string>
    <string name="welcome_manager">Bem vindo de volta,</string>
    <string name="manager_name">Gerente @manager!</string>
    <string name="release_locker">Liberar locação</string>
    <string name="abrir_arm_rio">Abrir armário</string>
    <string name="fotografia_realizada_com_sucesso">Fotografia realizada com sucesso!</string>
    <string name="nameuser">nameUser</string>
    <string name="emailuser">emailUser</string>
    <string name="finalizar">Finalizar</string>
    <string name="fechar">Fechar</string>
    <string name="fechar_arm_rio_novamente">Fechar armário novamente?</string>

</resources>