<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/realizar"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/realizar_loca_o"
        android:fontFamily="@font/manrope_semibold"
        android:textSize="30sp"
        android:textColor="@color/light_blue"/>
    <TextView
        android:id="@+id/select"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectione_uma_op_o_de_tempo"
        android:textSize="15sp"
        android:fontFamily="@font/manrope_semibold"
        android:textColor="@color/light_blue"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio30min">
        <RadioButton
            android:id="@+id/radio30min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_30_minutos" />

        <RadioButton
            android:id="@+id/radio1hr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_1_hora" />

        <RadioButton
            android:id="@+id/radio2hr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_2_horas" />

        <RadioButton
            android:id="@+id/radio4hr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_4_horas" />

        <RadioButton
            android:id="@+id/radio18hr"
            android:layout_width="match_parent"
            android:clickable="false"
            android:layout_height="match_parent"
            android:text="@string/_18_horas" />

        <TextView
            android:id="@+id/txtTime18"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/restriction_time"
            android:textColor="@color/red"
            android:visibility="visible" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txt30"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/pre_o_de_30_min"
        android:textSize="17sp" />
        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/valor_1hora"
            android:textSize="17sp"
/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/valor_2h"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/valor_de_4_hora"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/txt18"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/pre_o_de_18_hora"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnConfirm"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnCancel"
            android:textSize="14sp"
            android:layout_marginStart="15dp"
            android:textAllCaps="true"
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>