<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_extrabold"
            android:gravity="center"
            android:text="@string/cadastro_cartao"
            android:textColor="@color/blue_gray"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <EditText
                android:background="@drawable/input_shape"
                android:id="@+id/etCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_titular"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:inputType="text"
                />
            <EditText
                android:layout_marginTop="14dp"
                android:background="@drawable/input_shape"
                android:id="@+id/etCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/n_mero_do_cart_o"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLength="16"
                android:inputType="number"/>
            <EditText
                android:layout_marginTop="14dp"
                android:background="@drawable/input_shape"
                android:textSize="13sp"
                android:id="@+id/etCardValidation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validade"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLength="5"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="14dp"
                android:background="@drawable/input_shape"
                android:textSize="13sp"
                android:id="@+id/etCardCCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ccv"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:maxLength="3"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:orientation="vertical">

            <TextView
                android:padding="10dp"
                android:layout_width="200dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:fontFamily="@font/manrope_medium"
                android:gravity="center"
                android:text="@string/aviso_caucao"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSave"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_gray"
                style="@style/Widget.Material3.Button.OutlinedButton"/>
            <Button
                android:id="@+id/btnCancel"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:text="@string/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_gray"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>